--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
   <meta charset="UTF-8">
-  <title> Happy birthday Card</title>
+  <title> Dear Future Programmers </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
